# inferno

./: .gitignore  LICENSE  README.md  Test.hs  cabal.project  flake.nix  fourmolu.yaml  treefmt.toml
.github/: hlint.json  torch.sh
.github/workflows/: build-and-test.yml  build.yml
docs/: dev.md  misc.md  nix.md  parsing-eval.md
inferno-core/: CHANGELOG.md  LICENSE  inferno-core.cabal
inferno-core/app/: Main.hs
inferno-core/bench/: Main.hs
inferno-core/golden/BaseType/: TCustom.json  TDouble.json  TEnum.json  TInt.json  TResolution.json  TText.json  TTime.json  TTimeDiff.json  TWord16.json  TWord32.json  TWord64.json
inferno-core/golden/Ident/: Ident.json
inferno-core/golden/InfernoType/: TArr.json  TArray.json  TBase.json  TOptional.json  TRecord.json  TRep.json  TSeries.json  TTuple.json  TVar.json
inferno-core/golden/ModuleName/: ModuleName.json
inferno-core/golden/Namespace/: EnumNamespace.json  FunNamespace.json  ModuleNamespace.json  OpNamespace.json  TypeNamespace.json
inferno-core/golden/RestOfRecord/: RowAbsent.json  RowVar.json
inferno-core/golden/TV/: TV.json
inferno-core/golden/VCIncompatReason/: EnumConstructorsChanged.json  TypeSignatureChange.json
inferno-core/golden/VCMeta/: VCMeta.json
inferno-core/golden/VCObject/: VCEnum.json  VCModule.json  VCTestFunction.json
inferno-core/golden/VCObjectHash/: VCObjectHash.json
inferno-core/golden/VCObjectPred/: CloneOf.json  CloneOfNotFound.json  CloneOfRemoved.json  CompatibleWithPred.json  IncompatibleWithPred.json  Init.json  MarkedBreakingWithPred.json
inferno-core/golden/VCObjectVisibility/: VCObjectPrivate.json  VCObjectPublic.json
inferno-core/src/Inferno/: Core.hs  Docs.hs  Eval.hs  Infer.hs  Module.hs  Parse.hs
inferno-core/src/Inferno/Eval/: Error.hs
inferno-core/src/Inferno/Infer/: Env.hs  Error.hs  Exhaustiveness.hs  Pinned.hs  UF.hs
inferno-core/src/Inferno/Instances/: Arbitrary.hs
inferno-core/src/Inferno/Module/: Builtin.hs  Cast.hs  Prelude.hs
inferno-core/src/Inferno/Module/Prelude/: Defs.hs
inferno-core/src/Inferno/Parse/: Commented.hs  Error.hs
inferno-core/src/Inferno/Utils/: Arbitrary.hs
inferno-core/src/Inferno/Utils/QQ/: Common.hs  Module.hs  Script.hs
inferno-core/test/: Spec.hs  Utils.hs
inferno-core/test/Eval/: Spec.hs
inferno-core/test/Golden/: Spec.hs
inferno-core/test/Infer/: Spec.hs
inferno-core/test/Parse/: Spec.hs
inferno-core/test/VC/: Spec.hs
inferno-core/test/should-fail/: 00.simple.err  00.simple.inferno
inferno-core/test/should-pass/: 00.simple.inferno
inferno-lsp/: CHANGELOG.md  inferno-lsp.cabal  test.inferno
inferno-lsp/app/: Main.hs
inferno-lsp/src/Inferno/LSP/: Completion.hs  DocState.hs  Hover.hs  ParseInfer.hs  Server.hs
inferno-ml/: CHANGELOG.md  inferno-ml.cabal
inferno-ml-compat/: CHANGELOG.md  inferno-ml-compat.cabal
inferno-ml-compat/src/Inferno/ML/Compat/Module/: Prelude.hs
inferno-ml-compat/src/Inferno/ML/Compat/Types/: Value.hs
inferno-ml-compat/src/Inferno/ML/Module/: Compat.hs
inferno-ml-compat/src/Inferno/ML/Types/: Compat.hs
inferno-ml-compat/src/Inferno/ML/Types/Value/: Compat.hs
inferno-ml-remote/: CHANGELOG.md  inferno-ml-remote.cabal
inferno-ml-remote/app/: Main.hs
inferno-ml-remote/data/migrations/: v1-create-models-table.sql  v1-create-tables.sql
inferno-ml-remote/src/Inferno/ML/Remote/: Client.hs  Handler.hs  Server.hs  Types.hs  Utils.hs
inferno-ml-remote/src/Inferno/ML/Remote/Handler/: Inference.hs  Utils.hs
inferno-ml-remote/src/Inferno/ML/Remote/Handler/Inference/: Model.hs
inferno-ml-remote/test/: Main.hs  contrived.inferno  contrived2.inferno  contrived3.inferno  contrived4.inferno  test.inferno
inferno-ml-server/: CHANGELOG.md  README.org  inferno-ml-server.cabal
inferno-ml-server-types/: CHANGELOG.md  inferno-ml-server-types.cabal
inferno-ml-server-types/src/Inferno/ML/Server/: Client.hs  Types.hs
inferno-ml-server-types/src/Inferno/ML/Server/Client/: Bedrock.hs  Bridge.hs  PerServer.hs
inferno-ml-server-types/src/Inferno/ML/Server/Types/: Log.hs  Orphans.hs  PerServer.hs
inferno-ml-server-types/src/Inferno/ML/Types/: Value.hs
inferno-ml-server/exe/: Client.hs  Configure.hs  Dummy.hs  Main.hs  ParseAndSave.hs
inferno-ml-server/src/Inferno/ML/: Server.hs
inferno-ml-server/src/Inferno/ML/Server/: Bridge.hs  Inference.hs  Log.hs  Types.hs  Utils.hs
inferno-ml-server/src/Inferno/ML/Server/Inference/: Model.hs
inferno-ml-server/src/Inferno/ML/Server/Module/: Bridge.hs  Prelude.hs  Types.hs
inferno-ml-server/test/: Client.hs  Main.hs
inferno-ml/app/: Main.hs
inferno-ml/lsp/: Main.hs
inferno-ml/src/Inferno/ML/Module/: Prelude.hs  QQ.hs
inferno-ml/src/Inferno/ML/Types/: Value.hs
inferno-ml/test/: Spec.hs  downhole-autoencoder.inferno  mnist.inferno  mnist.sh  test-cpu.inferno  test-gpu.inferno  test.inferno  xor.inferno
inferno-types/: CHANGELOG.md  inferno-types.cabal
inferno-types/pretty-test/: Main.hs
inferno-types/src/Inferno/Types/: Module.hs  Syntax.hs  Type.hs  Value.hs  VersionControl.hs
inferno-types/src/Inferno/Utils/: Prettyprinter.hs
inferno-types/test/: Spec.hs
inferno-vc/: CHANGELOG.md  fix-races.md  inferno-vc.cabal
inferno-vc/app/: Main.hs
inferno-vc/src/Inferno/VersionControl/: Client.hs  Log.hs  Operations.hs  Server.hs  Testing.hs  Types.hs
inferno-vc/src/Inferno/VersionControl/Client/: Cached.hs
inferno-vc/src/Inferno/VersionControl/Operations/: Error.hs  Filesystem.hs
inferno-vc/src/Inferno/VersionControl/Server/: Types.hs  UnzipRequest.hs
inferno-vc/test/: Spec.hs
misc/: test_data.csv
ml-examples/: .gitignore  bert.inferno  bert.py  mnist.inferno  pi.inferno
nix/: apps.nix  checks.nix  default.nix  dev-shells.nix  ghc9.cabal.project  legacy-packages.nix  ml.cabal.project  modules.nix  nixos-modules.nix  packages.nix
nix/modules/: ml.nix
vscode-inferno-lsp-server/: .vscodeignore  LICENSE  README.md  default.nix  package-lock.json  package.json
vscode-inferno-syntax-highlighting/: LICENSE  README.md  build-monarch.js  build-tm.js  default.nix  package-lock.json  package.json
(+42 files in other folders)
