cabal-version:       2.4
name:                inferno-core
version:             0.11.6.0
synopsis:            A statically-typed functional scripting language
description:         Parser, type inference, and interpreter for a statically-typed functional scripting language
category:            DSL,Scripting
homepage:            https://github.com/plow-technologies/inferno.git#readme
bug-reports:         https://github.com/plow-technologies/inferno.git/issues
copyright:           Plow-Technologies LLC
license:             MIT
license-file:        LICENSE
author:              Sam Balco
maintainer:          info@plowtech.net
build-type:          Simple
extra-source-files:
    CHANGELOG.md
    golden/**/*.json
    golden/**/*.bin

source-repository head
  type: git
  location: https://github.com/plow-technologies/inferno.git

library
  exposed-modules:
      Inferno.Core
    , Inferno.Docs
    , Inferno.Eval
    , Inferno.Eval.Error
    , Inferno.Infer
    , Inferno.Infer.Env
    , Inferno.Infer.Exhaustiveness
    , Inferno.Infer.Pinned
    , Inferno.Module
    , Inferno.Module.Cast
    , Inferno.Module.Builtin
    , Inferno.Module.Prelude
    , Inferno.Parse
    , Inferno.Parse.Commented
    , Inferno.Parse.Error
    , Inferno.Instances.Arbitrary
    , Inferno.Utils.QQ.Script
    , Inferno.Utils.QQ.Module
  other-modules:
      Inferno.Infer.Error
    , Inferno.Module.Prelude.Defs
    , Inferno.Utils.QQ.Common
  hs-source-dirs:
      src
  ghc-options: -Wall -Wunused-packages -Wincomplete-uni-patterns -Wincomplete-record-updates -Wincomplete-patterns
  build-depends:
      base                      >= 4.13 && < 4.20
    , bimap
    , bytestring
    , containers
    , cryptonite
    , deepseq
    , dsp
    , exceptions
    , extra
    , generic-lens
    , inferno-vc
    , inferno-types
    , megaparsec
    , memory
    , mtl
    , parser-combinators
    , picosat == 0.1.6
    , prettyprinter
    , QuickCheck
    , quickcheck-arbitrary-adt
    , quickcheck-instances
    , random
    , raw-strings-qq
    , recursion-schemes
    , syb
    , template-haskell
    , text
    , time

  default-language: Haskell2010
  default-extensions:
      DeriveDataTypeable
    , DeriveFunctor
    , DeriveGeneric
    , FlexibleContexts
    , FlexibleInstances
    , LambdaCase
    , MultiParamTypeClasses
    , OverloadedStrings
    , TupleSections
    , RecordWildCards

test-suite inferno-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
      Eval.Spec
    , Golden.Spec
    , Infer.Spec
    , Parse.Spec
  build-depends:
      base >=4.7 && <5
    , containers
    , exceptions
    , hspec
    , hspec-golden-aeson
    , hspec-golden-cereal
    , HTF
    , inferno-core
    , inferno-types
    , inferno-vc
    , mtl
    , pretty-simple
    , QuickCheck
    , recursion-schemes
    , text
  default-language:    Haskell2010
  default-extensions:
      DeriveDataTypeable
    , DeriveFunctor
    , DeriveGeneric
    , FlexibleContexts
    , FlexibleInstances
    , LambdaCase
    , OverloadedStrings
    , TupleSections
    , RecordWildCards
  ghc-options: -Wall -Wunused-packages -Wincomplete-uni-patterns -Wincomplete-record-updates -O2 -threaded

executable inferno
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -Wall -Wunused-packages -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-T
  build-depends:
      base >=4.7 && <5
    , containers
    , inferno-core
    , inferno-types
    , optparse-applicative
    , text
  default-language: Haskell2010
