cabal-version:      >=1.10
name:               inferno-lsp
version:            0.2.7.0
synopsis:           LSP for Inferno
description:
  A language server protocol implementation for the Inferno language

category:           IDE,DSL,Scripting
homepage:           https://github.com/plow-technologies/inferno.git#readme
bug-reports:        https://github.com/plow-technologies/inferno.git/issues
copyright:          Plow-Technologies LLC
license:            MIT
license-file:       LICENSE
author:             Sam Balco
maintainer:         info@plowtech.net
build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/plow-technologies/inferno.git

library
  exposed-modules:    Inferno.LSP.Server
  other-modules:
    Inferno.LSP.Completion
    Inferno.LSP.ParseInfer

  hs-source-dirs:     src
  ghc-options:
    -Wall -Wunused-packages -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  build-depends:
      base
    , bytestring
    , co-log-core
    , containers
    , inferno-core
    , inferno-types
    , inferno-vc
    , lsp
    , lsp-types
    , megaparsec
    , microlens
    , plow-log
    , plow-log-async
    , prettyprinter
    , safe
    , special-keys
    , stm
    , text
    , text-rope
    , time
    , transformers
    , uuid

  default-language:   Haskell2010
  default-extensions:
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    TupleSections

executable inferno-lsp-server
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:
    -Wall -Wunused-packages -Wincomplete-uni-patterns
    -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-T

  build-depends:
      base          >=4.7 && <5
    , inferno-core
    , inferno-lsp

  default-language: Haskell2010
