cabal-version:      >=1.10
name:               inferno-ml-compat
version:            0.0.1
synopsis:           Compat types for Inferno ML
description:        Compat types for Inferno ML
homepage:           https://github.com/plow-technologies/inferno.git#readme
bug-reports:        https://github.com/plow-technologies/inferno.git/issues
copyright:          Plow-Technologies LLC
license:            MIT
author:             Rory Tyler Hayford
maintainer:         rory.hayford@plowtech.net
build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/plow-technologies/inferno.git

library
  exposed-modules:
    Inferno.ML.Compat.Module.Prelude
    Inferno.ML.Compat.Types.Value

  hs-source-dirs:     src
  -- TODO -Werror
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wunused-packages

  build-depends:
      base
    , containers
    , exceptions
    , extra
    , inferno-core
    , inferno-types
    , inline-c-cpp
    , prettyprinter
    , template-haskell
    , text

  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    TupleSections
    TypeApplications
