cabal-version:      >=1.10
name:               inferno-ml-compat
version:            0.5.0
synopsis:           Compat types for Inferno ML
description:        Compat types for Inferno ML
homepage:           https://github.com/plow-technologies/inferno.git#readme
bug-reports:        https://github.com/plow-technologies/inferno.git/issues
copyright:          Plow-Technologies LLC
license:            MIT
author:             Rory Tyler Hayford
maintainer:         rory.hayford@plowtech.net
build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/plow-technologies/inferno.git

library
  exposed-modules:
    Inferno.ML.Module.Compat
    Inferno.ML.Types.Compat
    Inferno.ML.Types.Value.Compat

  hs-source-dirs:     src
  ghc-options:
    -Wall -Werror -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wunused-packages

  build-depends:
      aeson
    , base
    , containers
    , exceptions
    , inferno-core
    , inferno-types
    , prettyprinter
    , template-haskell
    , text
    , vector

  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    TupleSections
    TypeApplications
