cabal-version:      2.4
name:               inferno-ml-remote
version:            0.1.0
synopsis:           Server for Inferno ML
description:        Server for Inferno ML
homepage:           https://github.com/plow-technologies/inferno.git#readme
bug-reports:        https://github.com/plow-technologies/inferno.git/issues
copyright:          Plow-Technologies LLC
license:            MIT
author:             Rory Tyler hayford
maintainer:         rory.hayford@plowtech.net
build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/plow-technologies/inferno.git

common common
  ghc-options:
    -Wall -Werror -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wmissing-deriving-strategies

  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveGeneric
    DerivingStrategies
    DisambiguateRecordFields
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  build-depends:      base >=4.7 && <5

library
  import:           common
  exposed-modules:
    Inferno.ML.Remote.Client
    Inferno.ML.Remote.Handler
    Inferno.ML.Remote.Server
    Inferno.ML.Remote.Types

  hs-source-dirs:   src
  build-depends:
    , base
    , bytestring
    , containers
    , extra
    , generic-lens
    , inferno-core
    , inferno-ml
    , inferno-types
    , microlens-platform
    , mtl
    , optparse-applicative
    , servant-client
    , servant-server
    , text
    , wai-logger
    , warp

  default-language: Haskell2010

executable inferno-ml-remote
  import:           common
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-T
  default-language: Haskell2010
  build-depends:    inferno-ml-remote
