cabal-version:      2.4
name:               inferno-ml-remote
version:            0.1.0
synopsis:           Server for Inferno ML
description:        Server for Inferno ML
homepage:           https://github.com/plow-technologies/inferno.git#readme
bug-reports:        https://github.com/plow-technologies/inferno.git/issues
copyright:          Plow-Technologies LLC
license:            MIT
author:             Rory Tyler hayford
maintainer:         rory.hayford@plowtech.net
build-type:         Simple
extra-source-files:
  ../inferno-ml/test/*.inferno
  CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/plow-technologies/inferno.git

common common
  ghc-options:
    -Wall -Werror -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wmissing-deriving-strategies

  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    LambdaCase
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    TupleSections
    TypeApplications

  build-depends:      base >=4.7 && <5

library
  import:          common
  exposed-modules:
    Inferno.ML.Remote.Client
    Inferno.ML.Remote.Handler
    Inferno.ML.Remote.Server
    Inferno.ML.Remote.Types
    Inferno.ML.Remote.Utils

  hs-source-dirs:  src
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , directory
    , exceptions
    , extra
    , filepath
    , generic-lens
    , http-client
    , http-types
    , inferno-core
    , inferno-ml
    , inferno-types
    , microlens-platform
    , mtl
    , optparse-applicative
    , servant-client
    , servant-server
    , temporary
    , text
    , time
    , typed-process
    , unix
    , wai
    , wai-logger
    , warp

executable inferno-ml-remote
  import:           common
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-T
  default-language: Haskell2010
  build-depends:    inferno-ml-remote

test-suite tests
  import:         common
  main-is:        Main.hs
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  type:           exitcode-stdio-1.0
  build-depends:
    , base
    , directory
    , filepath
    , generic-lens
    , hspec
    , http-client
    , inferno-core
    , inferno-ml
    , inferno-ml-remote
    , inferno-types
    , microlens-platform
    , mtl
    , servant-client
    , temporary
    , text
    , warp
