cabal-version: 2.4
name:          inferno-ml-server-types
version:       0.1.0
synopsis:      Types for Inferno ML server
description:   Types for Inferno ML server
homepage:      https://github.com/plow-technologies/inferno.git#readme
bug-reports:   https://github.com/plow-technologies/inferno.git/issues
copyright:     Plow-Technologies LLC
license:       MIT
author:        Rory Tyler hayford
maintainer:    rory.hayford@plowtech.net
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/plow-technologies/inferno.git

common common
  ghc-options:
    -Wall -Werror -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wmissing-deriving-strategies

  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    TupleSections
    TypeApplications

  build-depends:      base >=4.7 && <5

library
  import:          common
  exposed-modules:
    Inferno.ML.Server.Client
    Inferno.ML.Server.Client.Bridge
    Inferno.ML.Server.Types
    Inferno.ML.Server.Types.Orphans

  hs-source-dirs:  src
  build-depends:
    , aeson
    , attoparsec
    , base
    , bytestring
    , conduit
    , containers
    , deepseq
    , extra
    , generic-lens
    , http-api-data
    , inferno-core
    , inferno-types
    , iproute
    , microlens-platform
    , postgresql-simple
    , scientific
    , servant-client
    , servant-conduit
    , servant-server
    , text
    , unix
    , uri-bytestring
    , uri-bytestring-aeson
    , vector
