cabal-version: 2.4
name:          inferno-ml-server-types
version:       0.13.0
synopsis:      Types for Inferno ML server
description:   Types for Inferno ML server
homepage:      https://github.com/plow-technologies/inferno.git#readme
bug-reports:   https://github.com/plow-technologies/inferno.git/issues
copyright:     Plow-Technologies LLC
license:       MIT
author:        Rory Tyler hayford
maintainer:    rory.hayford@plowtech.net
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/plow-technologies/inferno.git

common common
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wmissing-deriving-strategies

  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    TupleSections
    TypeApplications

  build-depends:      base >=4.7 && <5

library
  import:          common
  exposed-modules:
    Inferno.ML.Server.Client
    Inferno.ML.Server.Client.Bridge
    Inferno.ML.Server.Types
    Inferno.ML.Types.Value

  hs-source-dirs:  src
  build-depends:
    , aeson
    , attoparsec
    , base
    , bson
    , bytestring
    , conduit
    , containers
    , deepseq
    , extra
    , generic-lens
    , hashable
    , hasktorch
    , http-api-data
    , inferno-core
    , inferno-types
    , inferno-vc
    , iproute
    , microlens-platform
    , postgresql-simple
    , prettyprinter
    , QuickCheck
    , quickcheck-arbitrary-adt
    , quickcheck-instances
    , scientific
    , servant-client
    , servant-conduit
    , servant-server
    , template-haskell
    , text
    , time
    , unix
    , uuid
    , vector
