cabal-version: 2.4
name:          inferno-ml-server-types
version:       0.24.0
synopsis:      Types for Inferno ML server
description:   Types for Inferno ML server
homepage:      https://github.com/plow-technologies/inferno.git#readme
bug-reports:   https://github.com/plow-technologies/inferno.git/issues
copyright:     Plow-Technologies LLC
license:       MIT
author:        Rory Tyler hayford
maintainer:    rory.hayford@plowtech.net
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/plow-technologies/inferno.git

common common
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wunused-packages

  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    TupleSections
    TypeApplications

  build-depends:      base >=4.7 && <5

library
  import:          common
  exposed-modules:
    Inferno.ML.Server.Client
    Inferno.ML.Server.Client.Bridge
    Inferno.ML.Server.Client.PerServer
    Inferno.ML.Server.Types
    Inferno.ML.Server.Types.Log
    Inferno.ML.Server.Types.PerServer

  hs-source-dirs:  src
  build-depends:
    , aeson
    , attoparsec
    , base
    , base64-bytestring
    , bytestring
    , byteunits
    , conduit
    , containers
    , cryptonite
    , deepseq
    , filepath
    , generic-lens
    , hashable
    , http-api-data
    , inferno-core
    , inferno-ml-compat
    , inferno-types
    , inferno-vc
    , iproute
    , microlens-platform
    , plow-log
    , plow-log-async
    , postgresql-simple
    , QuickCheck
    , quickcheck-arbitrary-adt
    , quickcheck-instances
    , scientific
    , servant-client
    , servant-conduit
    , servant-server
    , text
    , time
    , unix
    , unliftio
    , uuid
    , vector
