cabal-version:      2.4
name:               inferno-ml-server
version:            2025.2.28
synopsis:           Server for Inferno ML
description:        Server for Inferno ML
homepage:           https://github.com/plow-technologies/inferno.git#readme
bug-reports:        https://github.com/plow-technologies/inferno.git/issues
copyright:          Plow-Technologies LLC
license:            MIT
author:             Rory Tyler hayford
maintainer:         rory.hayford@plowtech.net
build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/plow-technologies/inferno.git

common common
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-unticked-promoted-constructors

  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    LambdaCase
    NamedFieldPuns
    NoFieldSelectors
    OverloadedLabels
    OverloadedStrings
    TupleSections
    TypeApplications

  build-depends:      base >=4.7 && <5

library
  import:          common
  exposed-modules:
    Inferno.ML.Server
    Inferno.ML.Server.Bridge
    Inferno.ML.Server.Inference
    Inferno.ML.Server.Inference.Model
    Inferno.ML.Server.Log
    Inferno.ML.Server.Module.Bridge
    Inferno.ML.Server.Module.Prelude
    Inferno.ML.Server.Module.Types
    Inferno.ML.Server.Types
    Inferno.ML.Server.Utils

  hs-source-dirs:  src
  build-depends:
    , aeson
    , base
    , bson
    , bytestring
    , conduit
    , containers
    , deepseq
    , exceptions
    , extra
    , filepath
    , generic-lens
    , hasktorch
    , http-api-data
    , http-client
    , http-types
    , inferno-core
    , inferno-ml
    , inferno-ml-server-types
    , inferno-types
    , inferno-vc
    , microlens-platform
    , monadlist
    , mtl
    , optparse-applicative
    , plow-log
    , plow-log-async
    , postgresql-simple
    , prettyprinter
    , resource-pool
    , scientific
    , servant-client
    , servant-server
    , template-haskell
    , text
    , time
    , unliftio
    , uuid
    , vector
    , wai
    , wai-logger
    , warp
    , yaml

executable inferno-ml-server
  import:           common
  main-is:          Main.hs
  hs-source-dirs:   exe
  ghc-options:      -threaded -rtsopts -with-rtsopts=-T
  default-language: Haskell2010
  build-depends:    inferno-ml-server

executable tests
  import:         common
  main-is:        Main.hs
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , filepath
    , generic-lens
    , hspec
    , inferno-ml-server
    , inferno-types
    , microlens-platform
    , mtl
    , plow-log
    , text
    , unliftio
    , uuid
    , vector

executable test-client
  import:         common
  main-is:        Client.hs
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -main-is Client
  build-depends:
    , aeson
    , base
    , bytestring
    , conduit
    , containers
    , extra
    , filepath
    , http-client
    , inferno-ml-server-types
    , iproute
    , random
    , servant-client
    , unliftio
    , uuid

executable dummy-bridge
  import:         common
  main-is:        Dummy.hs
  hs-source-dirs: exe
  ghc-options:    -threaded -rtsopts -main-is Dummy
  build-depends:
    , aeson
    , base
    , conduit
    , containers
    , filepath
    , http-types
    , inferno-ml-server
    , inferno-ml-server-types
    , microlens-platform
    , mtl
    , servant-server
    , unliftio
    , wai
    , wai-logger
    , warp

executable parse-and-save
  import:         common
  main-is:        ParseAndSave.hs
  hs-source-dirs: exe
  ghc-options:    -threaded -rtsopts -main-is ParseAndSave
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , inferno-core
    , inferno-ml
    , inferno-ml-server
    , inferno-types
    , inferno-vc
    , microlens-platform
    , postgresql-simple
    , text
    , time
    , unliftio
    , uuid
    , vector
