cabal-version:       >=1.10
name:                inferno-ml
version:             0.1.1
synopsis:            Machine Learning primitives for Inferno
description:         Machine Learning primitives for Inferno
homepage:            https://github.com/plow-technologies/inferno.git#readme
bug-reports:         https://github.com/plow-technologies/inferno.git/issues
copyright:           Plow-Technologies LLC
license:             MIT
author:              Siddharth Krishna
maintainer:          siddharth.krishna@plowtech.net
build-type:          Simple
extra-source-files:
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/plow-technologies/inferno.git

library
  exposed-modules:
      Inferno.ML.Module.Prelude
    , Inferno.ML.Types.Value
  hs-source-dirs:
      src
  ghc-options: -Wall -Werror -Wincomplete-uni-patterns -Wincomplete-record-updates -Wunused-packages
  build-depends:
      base
    , containers
    , exceptions
    , hasktorch
    , inferno-core
    , inferno-types
    , template-haskell
    , text
    , prettyprinter
  default-language: Haskell2010
  default-extensions:
      LambdaCase
    , FlexibleContexts
    , FlexibleInstances
    , MultiParamTypeClasses
    , OverloadedStrings

executable inferno-ml-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -Wall -Werror -Wincomplete-uni-patterns -Wincomplete-record-updates -Wunused-packages -threaded -rtsopts -with-rtsopts=-T
  build-depends:
      base >=4.7 && <5
    , containers
    , inferno-core
    , inferno-ml
    , inferno-types
    , text
  default-language: Haskell2010

executable inferno-ml-lsp-server
  main-is: Main.hs
  hs-source-dirs:
      lsp
  ghc-options: -Wall -Wunused-packages -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-T
  build-depends:
      base >=4.7 && <5
    , inferno-lsp
    , inferno-ml
  default-language: Haskell2010

test-suite inferno-ml-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base >=4.7 && <5
    , containers
    , hasktorch
    , hspec
    , inferno-core
    , inferno-types
    , inferno-ml
    , text
  default-language:    Haskell2010
  ghc-options: -Wall -Wunused-packages -Wincomplete-uni-patterns -Wincomplete-record-updates
