cabal-version:      >=1.10
name:               inferno-types
version:            0.4.6.1
synopsis:           Core types for Inferno
description:        Core types for the Inferno language
category:           DSL,Scripting
homepage:           https://github.com/plow-technologies/inferno.git#readme
bug-reports:        https://github.com/plow-technologies/inferno.git/issues
copyright:          Plow-Technologies LLC
license:            MIT
license-file:       LICENSE
author:             Sam Balco
maintainer:         info@plowtech.net
build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/plow-technologies/inferno.git

library
  exposed-modules:
    Inferno.Types.Module
    Inferno.Types.Syntax
    Inferno.Types.Type
    Inferno.Types.Value
    Inferno.Types.VersionControl
    Inferno.Utils.Prettyprinter

  hs-source-dirs:     src
  ghc-options:
    -Wall -Wunused-packages -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  build-depends:
      aeson
    , base
    , base64-bytestring
    , bifunctors
    , bytestring
    , cereal
    , containers
    , cryptonite
    , deepseq
    , exceptions
    , hashable
    , megaparsec
    , memory
    , mtl
    , prettyprinter
    , recursion-schemes
    , servant
    , text

  default-language:   Haskell2010
  default-extensions:
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    TupleSections

executable pretty-test
  main-is:          Main.hs
  hs-source-dirs:   pretty-test
  ghc-options:
    -Wall -Wunused-packages -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  build-depends:
      base           >=4.7 && <5
    , containers
    , inferno-types

  default-language: Haskell2010

test-suite inferno-types-tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs

  -- other-modules:
  build-depends:
      base           >=4.7 && <5
    , containers
    , hspec
    , inferno-types
    , megaparsec
    , text

  default-language:   Haskell2010
  default-extensions:
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    OverloadedStrings
    RecordWildCards
    TupleSections

  ghc-options:
    -Wall -Wunused-packages -Wincomplete-uni-patterns
    -Wincomplete-record-updates -O2 -threaded
