cabal-version:       >=1.10
name:                inferno-vc
version:             0.3.4.0
synopsis:            Version control server for Inferno
description:         A version control server for Inferno scripts
category:            DSL,Scripting
homepage:            https://github.com/plow-technologies/inferno.git#readme
bug-reports:         https://github.com/plow-technologies/inferno.git/issues
copyright:           Plow-Technologies LLC
license:             MIT
license-file:        LICENSE
author:              Sam Balco
maintainer:          info@plowtech.net
build-type:          Simple
extra-source-files:  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/plow-technologies/inferno.git

library
  exposed-modules:
      Inferno.VersionControl.Client
    , Inferno.VersionControl.Client.Cached
    , Inferno.VersionControl.Operations
    , Inferno.VersionControl.Operations.Filesystem
    , Inferno.VersionControl.Operations.Error
    , Inferno.VersionControl.Log
    , Inferno.VersionControl.Server
    , Inferno.VersionControl.Server.Types
    , Inferno.VersionControl.Server.UnzipRequest
    , Inferno.VersionControl.Types
    , Inferno.VersionControl.Testing
  hs-source-dirs:
      src
  ghc-options: -Wall -Wunused-packages -Wincomplete-uni-patterns -Wincomplete-record-updates
  build-depends:
      aeson                              >= 2.1.1 && < 2.2
    , async                              >= 2.2.4 && < 2.3
    , base                               >= 4.13 && < 4.17
    , base64-bytestring                  >= 1.2.1 && < 1.3
    , bytestring                         >= 0.10.10 && < 0.12
    , containers                         >= 0.6.2 && < 0.7
    , cryptonite                         >= 0.30 && < 0.31
    , directory                          >= 1.3.6 && < 1.4
    , exceptions                         >= 0.10.4 && < 0.11
    , filepath                           >= 1.4.2 && < 1.5
    , generic-lens                       >= 2.2.1 && < 2.3
    , http-client                        >= 0.7.13 && < 0.8
    , http-types                         >= 0.12.3 && < 0.13
    , inferno-types                      >= 0.2.0 && < 0.4
    , lens                               >= 5.2 && < 5.3
    , mtl                                >= 2.2.2 && < 2.3
    , plow-log                           >= 0.1.6 && < 0.2
    , SafeSemaphore                      >= 0.10.1 && < 0.11
    , servant                            >= 0.19 && < 0.20
    , servant-client                     >= 0.19 && < 0.20
    , servant-server                     >= 0.19.1 && < 0.20
    , servant-typed-error                >= 0.1.2 && < 0.2
    , text                               >= 2.0.1 && < 2.1
    , time                               >= 1.9.3 && < 1.12
    , wai                                >= 3.2.3 && < 3.3
    , wai-extra                          >= 3.1.12 && < 3.2
    , warp                               >= 3.3.23 && < 3.4
    , yaml                               >= 0.11.8 && < 0.12
    , zlib                               >= 0.6.3 && < 0.7
    , atomic-write                       >= 0.2   && < 0.3
    , hspec
    , QuickCheck

  default-language: Haskell2010
  default-extensions:
      DeriveDataTypeable
    , DeriveFunctor
    , DeriveGeneric
    , FlexibleContexts
    , FlexibleInstances
    , LambdaCase
    , MultiParamTypeClasses
    , OverloadedStrings
    , TupleSections
    , RecordWildCards

test-suite inferno-vc-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base >=4.7 && <5
    , hspec
    , inferno-vc
    , servant-client
    , temporary
  default-language:    Haskell2010
  default-extensions:
      DeriveDataTypeable
    , DeriveFunctor
    , DeriveGeneric
    , FlexibleContexts
    , FlexibleInstances
    , LambdaCase
    , OverloadedStrings
    , TupleSections
    , RecordWildCards
  ghc-options: -Wall -Wunused-packages -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded

-- An example executable definition, needs instantation of author/group types:
-- executable inferno-vc-server
--   main-is: Main.hs
--   hs-source-dirs:
--       app
--   ghc-options: -Wall -Werror -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-T
--   build-depends:
--       base >=4.7 && <5
--     , inferno-vc
--   default-language: Haskell2010
