cabal-version:       >=1.10
name:                inferno-vc
version:             0.3.7.0
synopsis:            Version control server for Inferno
description:         A version control server for Inferno scripts
category:            DSL,Scripting
homepage:            https://github.com/plow-technologies/inferno.git#readme
bug-reports:         https://github.com/plow-technologies/inferno.git/issues
copyright:           Plow-Technologies LLC
license:             MIT
license-file:        LICENSE
author:              Sam Balco
maintainer:          info@plowtech.net
build-type:          Simple
extra-source-files:  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/plow-technologies/inferno.git

library
  exposed-modules:
      Inferno.VersionControl.Client
    , Inferno.VersionControl.Client.Cached
    , Inferno.VersionControl.Operations
    , Inferno.VersionControl.Operations.Filesystem
    , Inferno.VersionControl.Operations.Error
    , Inferno.VersionControl.Log
    , Inferno.VersionControl.Server
    , Inferno.VersionControl.Server.Types
    , Inferno.VersionControl.Server.UnzipRequest
    , Inferno.VersionControl.Types
    , Inferno.VersionControl.Testing
  hs-source-dirs:
      src
  ghc-options: -Wall -Wunused-packages -Wincomplete-uni-patterns -Wincomplete-record-updates
  build-depends:
      aeson
    , async
    , base                               >= 4.13 && < 4.20
    , base64-bytestring
    , bytestring
    , containers
    , cryptonite
    , directory
    , exceptions
    , filepath
    , generic-lens
    , http-client
    , http-types
    , inferno-types
    , lens
    , mtl
    , plow-log
    , SafeSemaphore
    , servant
    , servant-client
    , servant-server
    , servant-typed-error
    , text
    , time
    , wai
    , wai-extra
    , warp
    , yaml
    , zlib
    , atomic-write
    , hspec
    , QuickCheck
    , stm

  default-language: Haskell2010
  default-extensions:
      DeriveDataTypeable
    , DeriveFunctor
    , DeriveGeneric
    , FlexibleContexts
    , FlexibleInstances
    , LambdaCase
    , MultiParamTypeClasses
    , OverloadedStrings
    , TupleSections
    , RecordWildCards

test-suite inferno-vc-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base >=4.7 && <5
    , hspec
    , inferno-vc
    , servant-client
    , temporary
  default-language:    Haskell2010
  default-extensions:
      DeriveDataTypeable
    , DeriveFunctor
    , DeriveGeneric
    , FlexibleContexts
    , FlexibleInstances
    , LambdaCase
    , OverloadedStrings
    , TupleSections
    , RecordWildCards
  ghc-options: -Wall -Wunused-packages -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded

-- An example executable definition, needs instantation of author/group types:
-- executable inferno-vc-server
--   main-is: Main.hs
--   hs-source-dirs:
--       app
--   ghc-options: -Wall -Werror -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-T
--   build-depends:
--       base >=4.7 && <5
--     , inferno-vc
--   default-language: Haskell2010
